feat: add user related service and update api docs (#2)
